--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.4 - Action.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.4 - Action.md
@@ -12,7 +12,7 @@ Geodesics and dynamics: The background is fixed (absolute time × Euclidean spac
 
 Symbols:
 -   $v=1$ (field speed by units), $\kappa>0$ (coupling), $\eta>0$ (shell thickness)
--   $f(\lvert v\rvert)$ (emitter-speed dimming factor; default $f(\lvert v\rvert)=1/(1+\lvert v\rvert)$; see 00.2.1.11)
+-   $f(\lvert v\rvert)$ (emitter-speed dimming factor; default $f(\lvert v\rvert)=1/(1+\lvert v\rvert)$; )
 -   $\epsilon>0$ (unit charge magnitude); Electrino $q=-\epsilon$, Positrino $q=+\epsilon$
 -   $\sigma_{q q'}=\mathrm{sign}(q\,q')\in\{+1,-1\}$
 -   $r=\|\mathbf{s}_{o'}(t)-\mathbf{s}_o(t_0)\|$, $\;\hat{\mathbf{r}}=(\mathbf{s}_{o'}(t)-\mathbf{s}_o(t_0))/r$
