--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.4 - Action.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.4 - Action.md
@@ -24,6 +24,7 @@ Action occurs when a point object $o'$ at position $\mathbf{s}_{o'}(t)$ intersec
 -   **Causal Interaction Set:** The receiver $o'$ at time $t$ interacts with a source $o$ through the (possibly multi-valued) set of causal emission times
     $$
     \mathcal{C}_o(t) = \big\{\, t_0 < t \;\big|\; \|\mathbf{s}_{o'}(t) - \mathbf{s}_o(t_0)\| = (t - t_0) \,\big\}.
+    \quad\text{(CT)}
     $$
     For $|\mathbf{v}_o(t_0)| < 1$ locally, $\mathcal{C}_o(t)$ is generically a singleton; for $|\mathbf{v}_o|> 1$ it may contain multiple solutions (including self-hits when $o'=o$). In plain language: this set collects all earlier moments of the source that can send a sphere to arrive exactly “now” at the receiver’s current location.
 
@@ -34,6 +35,7 @@ Action occurs when a point object $o'$ at position $\mathbf{s}_{o'}(t)$ intersec
     The signed, purely radial contribution is
     $$
     \mathbf{a}_{o'\leftarrow o}(t; t_0) = \kappa\,\sigma_{q_o q_{o'}}\,\frac{|q_o q_{o'}|}{r^2}\,f\!\big(\|\mathbf{v}_o(t_0)\|\big)\,\hat{\mathbf{r}}.
+    \quad\text{(EOM)}
     $$
     No magnetic/right-hand-rule terms appear; there are no cross products or velocity-direction couplings—only radial action along $\hat{\mathbf{r}}$. The total acceleration superposes over all sources and causal times:
     $$
@@ -84,7 +86,7 @@ Plain language: split your velocity into along-the-line and sideways. A hit only
 ### **Well-posedness and Regularization**
 The surface–delta shells yield impulsive forces at isolated hit times. One may treat the dynamics as a measure-driven ODE in $t$ (with velocity of bounded variation), or regularize by replacing the surface delta with a narrow shell of thickness $\eta$,
 $$
-\delta(r - \tau)\ \longrightarrow\ \frac{1}{\sqrt{2\pi}\,\eta}\,\exp\!\Big(-\frac{(r - \tau)^2}{2\eta^2}\Big),
+\delta(r - \tau)\ \longrightarrow\ \frac{1}{\sqrt{2\pi}\,\eta}\,\exp\!\Big(-\frac{(r - \tau)^2}{2\eta^2}\Big),\quad\text{(REG)}
 $$
 while preserving total emission $q_{\text{eff}}$. This produces continuous-in-time forces and classical $C^1$ solutions for $\mathbf{s}(t)$ given $C^1$ initial data. In the super-field-speed regime ($|\mathbf{v}_a|>1$), multiple self-roots can occur; summing over all causal times with an integrable regularization ensures finite total impulse. In plain English: the ideal model gives instantaneous “kicks”; the $\eta$-thickening turns them into brief, smooth pushes so standard ODE methods apply.
 
