--- a/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.2 - Walkthrough Step 2 — Units and Constants.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.2 - Walkthrough Step 2 — Units and Constants.md
@@ -1,6 +1,6 @@
 # Walkthrough Step 2 — Units and Constants
 
-Existing text excerpt (from 00.1.4 - Action.md):
+Existing text excerpt:
 > ### **Units and constants**
 > -   We choose units with field speed $v=1$ (select $L_0,T_0$ so $v=L_0/T_0=1$); all speeds are hence dimensionless.
 > -   $\kappa>0$ is the universal coupling constant controlling interaction strength.
@@ -10,7 +10,7 @@ Existing text excerpt (from 00.1.4 - Action.md):
 > -   $v=1$ (field speed by units), $\kappa>0$ (coupling), $\eta>0$ (shell thickness)
 > -   $\epsilon>0$ (unit charge magnitude); Electrino $q=-\epsilon$, Positrino $q=+\epsilon$
 > -   $\sigma_{q q'}=\mathrm{sign}(q\,q')\in\{+1,-1\}$
-> -   $r=\|\mathbf{s}_{o'}(t)-\mathbf{s}_o(t')\|$, $\;\hat{\mathbf{r}}=(\mathbf{s}_{o'}(t)-\mathbf{s}_o(t'))/r$
+> -   $r=\|\mathbf{s}_{o'}(t)-\mathbf{s}_o(t_0)\|$, $\;\hat{\mathbf{r}}=(\mathbf{s}_{o'}(t)-\mathbf{s}_o(t_0))/r$
 
 Detailed explanation (dynamical geometry):
 
