--- a/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.3 - Walkthrough Step 3 — Causal set and delay geometry.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.3 - Walkthrough Step 3 — Causal set and delay geometry.md
@@ -1,6 +1,6 @@
 # Walkthrough Step 3 — Causal set and delay geometry
 
-Existing text excerpt (from 00.1.4 - Action.md):
+Existing text excerpt:
 > -   **Causal Interaction Set:** The receiver $o'$ at time $t$ interacts with a source $o$ through the (possibly multi-valued) set of causal emission times
 >     $$
 >     \mathcal{C}_o(t) = \big\{\, t_0 < t \;\big|\; \|\mathbf{s}_{o'}(t) - \mathbf{s}_o(t_0)\| = (t - t_0) \,\big\}.
