--- a/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.4 - Walkthrough Step 4 — Master equation of motion.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.4 - Walkthrough Step 4 — Master equation of motion.md
@@ -1,6 +1,6 @@
 # Walkthrough Step 4 — Master equation of motion
 
-Existing text excerpt (from 00.1.4 - Action.md):
+Existing text excerpt:
 > See 00.1.4 — Action.md for the canonical Master Equation of Motion (EOM), stated with emission time $t_0$, delay $\tau=t-t_0$, and the emitter-speed dimming factor $f(\lvert v\rvert)$ (default $f(\lvert v\rvert)=1/(1+\lvert v\rvert)$). This step unpacks the terms and conventions rather than restating the EOM.
 
 Detailed explanation (terms and conventions):
