--- a/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.5 - Walkthrough Step 5 — Receiver velocity and work.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.5 - Walkthrough Step 5 — Receiver velocity and work.md
@@ -1,6 +1,6 @@
 # Walkthrough Step 5 — Receiver velocity and work
 
-Existing text excerpt (from 00.1.4 - Action.md):
+Existing text excerpt:
 > ### Receiver velocity: radial vs orthogonal components (instantaneous effect)
 > Because $\mathbf{a}_{o'\leftarrow o}(t;t_0) \parallel \hat{\mathbf{r}}$, its instantaneous effect satisfies
 > $$
