--- a/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.6 - Walkthrough Step 6 — Well-posedness and regularization.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.6 - Walkthrough Step 6 — Well-posedness and regularization.md
@@ -1,6 +1,6 @@
 # Walkthrough Step 6 — Well-posedness and regularization
 
-Existing text excerpt (from 00.1.4 - Action.md):
+Existing text excerpt:
 > ### **Well-posedness and Regularization**
 > $$
 > \delta(r - \tau)\ \longrightarrow\ \frac{1}{\sqrt{2\pi}\,\eta}\,\exp\!\Big(-\frac{(r - \tau)^2}{2\eta^2}\Big),
