--- a/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.7 - Walkthrough Step 7 — Superposition and locality.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.7 - Walkthrough Step 7 — Superposition and locality.md
@@ -1,6 +1,6 @@
 # Walkthrough Step 7 — Superposition and locality
 
-Existing text excerpt (from 00.1.4 - Action.md):
+Existing text excerpt:
 > -   **Superposition:** The potential fields from all sources superpose linearly. The net potential at any point is the sum of the individual potentials:
 >     $$
 >     \Phi_{\text{net}} = \sum_{i} \Phi_i
