--- a/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.8 - Walkthrough Step 8 — Self-interaction switch.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.8 - Walkthrough Step 8 — Self-interaction switch.md
@@ -1,6 +1,6 @@
 # Walkthrough Step 8 — Self-interaction switch
 
-Existing text excerpt (from 00.1.4 - Action.md):
+Existing text excerpt:
 > ### **Self-Interaction**
 > An Architrino can intersect a potential sphere that it emitted itself at an earlier point in its history. Self-interaction can occur when an Architrino’s speed has exceeded field speed ($|\mathbf{v}_a| > v$). In this regime, the particle moves ahead of previously emitted wavefronts, allowing it to interact with its own field. This self-interaction is always repulsive and plays a key role in the stability of emergent structures.
 
