--- a/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.1 - Orbiting Binary.md
+++ b/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.1 - Orbiting Binary.md
@@ -10,13 +10,13 @@ Let the Electrino be particle 1 and the Positrino be particle 2.
 -   **Positions:** $\mathbf{s}_1(t)$ and $\mathbf{s}_2(t)$
 -   **Charges:** $q_1 = -\epsilon$ and $q_2 = +\epsilon$
 
-The motion of each particle is determined by the field emitted by the other at a delayed time. The acceleration of the Electrino (particle 1) at time $t$ is caused by the Positrino's (particle 2) field emitted at a delayed time $t'$. This is governed by the interaction condition:
+The motion of each particle is determined by the field emitted by the other at a delayed time. The acceleration of the Electrino (particle 1) at time $t$ is caused by the Positrino's (particle 2) field emitted at an emission time $t_0$. This is governed by the interaction condition:
 $$
-\|\mathbf{s}_1(t) - \mathbf{s}_2(t')\| = v(t - t')
+\|\mathbf{s}_1(t) - \mathbf{s}_2(t_0)\| = v(t - t_0)
 $$
 The acceleration vector for the Electrino is attractive, pointing towards the Positrino's delayed position:
 $$
-\mathbf{a}_1(t) \propto -\hat{\mathbf{r}}_{2'1} = - \frac{\mathbf{s}_1(t) - \mathbf{s}_2(t')}{\|\mathbf{s}_1(t) - \mathbf{s}_2(t')\|}
+\mathbf{a}_1(t) \propto -\hat{\mathbf{r}}_{21} = - \frac{\mathbf{s}_1(t) - \mathbf{s}_2(t_0)}{\|\mathbf{s}_1(t) - \mathbf{s}_2(t_0)\|}
 $$
 A symmetric set of equations governs the Positrino's motion based on the Electrino's emissions.
 
@@ -61,6 +61,8 @@ The stabilization of the orbiting binary gives rise to fundamental, emergent pro
 -   **An Emergent Unit of Distance:** The radius of this stable orbit is a constant, determined by the fundamental parameters of the model (field speed $v$, charge $\epsilon$). It serves as the smallest possible orbital radius and thus becomes a natural, emergent unit of distance.
 -   **An Imposed Speed Limit:** While individual Architrinos have no inherent speed limit, the particles within this stable assembly are constrained to a specific, constant orbital speed. This creates a practical speed limit for particles bound within such structures.
 -   **A Zero-Potential Axis:** In an ideal, symmetric orbit, the positive and negative potentials emitted by the two particles perfectly cancel along the axis of rotation. This creates a line of zero net potential. In a sense, this axis acts as a "wormhole" through which another Architrino could pass without being accelerated by the binary, provided its path is perfectly aligned with the axis.
+
+Validation note: Compare these claims against the standard numerical cross-checks (see 00.2.5 — Numerical Cross-Checks).
 
 ---
 
