--- a/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.9 - Perspective.md
+++ b/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.9 - Perspective.md
@@ -114,7 +114,7 @@ We work throughout in units with field speed $v=1$; per-hit accelerations are pu
 - Prediction: the same d0 appears across binaries with the same ε and v, independent of initial conditions after sufficient relaxation.
 
 3) Energy consistency across the |v|=1 transition
-- Use $\Phi_\varepsilon$ to evaluate $U$ and verify $\Delta E_k = -\,\Delta U$ across events that cross the symmetry point; in the $\varepsilon\to 0$ limit, impulses integrate to the same work.
+- Use $\Phi_\eta$ to evaluate $U$ and verify $\Delta E_k = -\,\Delta U$ across events that cross the symmetry point; in the $\eta\to 0$ limit, impulses integrate to the same work.
 
 4) Numerical recipe (robust, minimal assumptions)
 - For each receiver time $t$: (i) root-find causal emission times $t_0$ for all sources (and self), (ii) discard non-physical roots ($H(0)=0$, handle $r=0$ by symmetry), (iii) sum $a_{o′\leftarrow o}(t;t_0)$ with the canonical emitter-only modulation, (iv) integrate velocity and position with an event-aware scheme. Use $\varepsilon$-thickening for smooth integration when needed.
