--- a/Geometrical Model of Nature/20 - Informational Layer/20.1 - Semantic Interfaces/20.1.1 - Schemas & Conventions/20.1.1.0 - Mathematical Style Guide.md
+++ b/Geometrical Model of Nature/20 - Informational Layer/20.1 - Semantic Interfaces/20.1.1 - Schemas & Conventions/20.1.1.0 - Mathematical Style Guide.md
@@ -129,7 +129,7 @@ Receiver velocity decomposition (instantaneous):
   $$
   \frac{d}{dt}\mathbf{v}_\perp = 0,\qquad \frac{d}{dt}v_r = a_{o′\leftarrow j}\cdot \hat{\mathbf{r}}
   $$
-- Local trend: inward motion ($\large v_r<0$) tends to strengthen subsequent per-hit contributions via the $\large 1/r^2$ factor; outward ($\large v_r>0$) tends to weaken them, all else equal.
+- Local trend: inward motion ($v_r<0$) tends to strengthen subsequent per-hit contributions via the $1/r^2$ factor; outward ($v_r>0$) tends to weaken them, all else equal.
 
 Plain language: a hit changes only the along-the-line piece of your velocity right then; sideways motion is unchanged at that instant.
 
@@ -185,3 +185,4 @@ Plain language: Fix units so the field speed is one; use ε as the basic charge;
 - Phrase velocity effects as “per-wavefront amplitude modulated by the emitter’s speed; emission cadence is constant.”
 - Notation for “now”: use $t_{\text{now}}$ for a fixed current evaluation time; use $t_{\text{obs}}$ for observation time. Avoid Tnow/`T_now`; keep $t$ as the running variable elsewhere.
 - Emitters/receivers are individual Architrinos; composite assemblies never emit or receive as wholes; their behavior emerges from constituent Architrinos.
+- On first occurrence in a doc: “We work in units with field speed v=1 unless stated otherwise.”
