--- a/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.1 - Walkthrough Step 1 — Background and Simple Action.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.1 - Walkthrough Step 1 — Background and Simple Action.md
@@ -1,6 +1,6 @@
 # Walkthrough Step 1 — Background and Simple Action
 
-Existing text excerpt (from 00.1.4 - Action.md):
+Existing text excerpt:
 > The dynamics of an Architrino are governed by a simple action: an acceleration caused by the intersection of its path with a potential field.
 >
 > Geodesics and dynamics: The background is fixed (absolute time × Euclidean space); free paths are straight. Accelerations come only from delayed, purely radial hits from emitted spheres—never from background curvature.
