--- a/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.9 - Walkthrough Step 9 — Informational ambiguity.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.9 - Walkthrough Step 9 — Informational ambiguity.md
@@ -1,6 +1,6 @@
 # Walkthrough Step 9 — Informational ambiguity
 
-Existing text excerpt (from 00.1.4 - Action.md):
+Existing text excerpt:
 > ### **Informational Ambiguity at the Receiver**
 > From the perspective of the receiving Architrino, the information carried by an intersecting potential sphere is limited. The receiver only knows two things:
 > 1.  The net strength of the potential at the point of intersection.
