--- a/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.4 - Walkthrough Step 4 — Master equation of motion.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.4 - Walkthrough Step 4 — Master equation of motion.md
@@ -6,7 +6,7 @@ Existing text excerpt:
 Detailed explanation (terms and conventions):
 
 - Direction and sign:
-  - $\hat{\mathbf{r}}$ points from the source’s historical position $\mathbf{s}_o(t')$ to the receiver’s current position $\mathbf{s}_{o'}(t)$.
+  - $\hat{\mathbf{r}}$ points from the source’s historical position $\mathbf{s}_o(t_0)$ to the receiver’s current position $\mathbf{s}_{o'}(t)$.
   - $\sigma_{q_o q_{o'}}=\mathrm{sign}(q_o q_{o'})$ selects repulsion for like charges and attraction for unlike.
 
 - Scaling and normalization:
