--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.4 - Action.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.4 - Action.md
@@ -12,7 +12,7 @@ Geodesics and dynamics: The background is fixed (absolute time × Euclidean spac
 
 Symbols:
 -   $v=1$ (field speed by units), $\kappa>0$ (coupling), $\eta>0$ (shell thickness)
--   $f(\lvert v\rvert)$ (emitter-speed dimming factor; default $f(\lvert v\rvert)=1/(1+\lvert v\rvert)$; )
+-   $f(\lvert v\rvert)$ (emitter-speed dimming factor; default $f(\lvert v\rvert)=1/(1+\lvert v\rvert)$).
 -   $\epsilon>0$ (unit charge magnitude); Electrino $q=-\epsilon$, Positrino $q=+\epsilon$
 -   $\sigma_{q q'}=\mathrm{sign}(q\,q')\in\{+1,-1\}$
 -   $r=\|\mathbf{s}_{o'}(t)-\mathbf{s}_o(t_0)\|$, $\;\hat{\mathbf{r}}=(\mathbf{s}_{o'}(t)-\mathbf{s}_o(t_0))/r$
@@ -98,7 +98,7 @@ while preserving total emission $q_{\text{eff}}$. This produces continuous-in-ti
     $$
     The total acceleration on a particle at any instant is the vector sum of the accelerations from all intersecting potential spheres. Operationally, every Architrino is continuously immersed in the superposed sphere streams of all others (and, when kinematics permit, its own); tractability comes from treating each causal hit independently with $1/r^2$ distance weighting (and emitter-side speed modulation), which makes local sources dominate.
 
--   **Velocity Dependence:** The dynamics are velocity-dependent. Architrinos are transceivers: they emit potential spheres at a constant cadence; only the per-wavefront amplitude is modulated by the emitter’s speed. The receiver’s speed does not change the instantaneous force magnitude; it affects only the work rate via $\mathbf{F}\cdot\mathbf{v} = |\mathbf{F}|\,v_r$. Self-interaction arises when the causal set $\,\mathcal{C}_a(t)\,$ for $o'=o$ is nonempty; this can occur when $|\mathbf{v}_a| > v$ at some past time or due to curvature of the path allowing previously emitted shells to re-intersect the worldline.
+-   **Velocity Dependence:** The dynamics are velocity-dependent. Architrinos are transceivers: they emit potential spheres at a constant cadence; only the per-wavefront amplitude is modulated by the emitter’s speed. The receiver’s speed does not change the instantaneous force magnitude; it affects only the work rate via $\mathbf{F}\cdot\mathbf{v} = |\mathbf{F}|\,v_r$. Self-interaction requires $|\mathbf{v}_a| > v$ at some emission times (super-field-speed), so the worldline outruns its recent shells; curvature alone is insufficient if $|\mathbf{v}_a|<v$ everywhere.
 
 ### **Self-Interaction**
 
