--- a/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.1 - Walkthrough Step 1 — Background and Simple Action.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.1 - Walkthrough Step 1 — Background and Simple Action.md
@@ -18,7 +18,7 @@ Detailed explanation (dynamical geometry):
 - Intersection as the driver of acceleration:
   - The receiver’s worldline is $\mathbf{s}_{o'}(t)$. An intersection at time $t$ means some earlier emission time $t_0 < t$ satisfies the causal-distance condition
     $
-    \|\mathbf{s}_{o'}(t) - \mathbf{s}_o(t')\| = v(t - t')
+    \|\mathbf{s}_{o'}(t) - \mathbf{s}_o(t_0)\| = v(t - t_0)
     $
     That event is a causal hit from source $o$’s past to the receiver’s present.
   - At a hit, the acceleration impulse is purely radial along
