--- a/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.1 - Orbiting Binary.md
+++ b/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.1 - Orbiting Binary.md
@@ -60,7 +60,7 @@ At this limit, the trajectory stabilizes, and the system settles into a **stable
 The stabilization of the orbiting binary gives rise to fundamental, emergent properties for the universe:
 -   **An Emergent Unit of Distance:** The radius of this stable orbit is a constant, determined by the fundamental parameters of the model (field speed $v$, charge $\epsilon$). It serves as the smallest possible orbital radius and thus becomes a natural, emergent unit of distance.
 -   **An Imposed Speed Limit:** While individual Architrinos have no inherent speed limit, the particles within this stable assembly are constrained to a specific, constant orbital speed. This creates a practical speed limit for particles bound within such structures.
--   **A Zero-Potential Axis:** In an ideal, symmetric orbit, the positive and negative potentials emitted by the two particles perfectly cancel along the axis of rotation. This creates a line of zero net potential. In a sense, this axis acts as a "wormhole" through which another Architrino could pass without being accelerated by the binary, provided its path is perfectly aligned with the axis.
+-   **A Zero-Potential Axis:** In an ideal, symmetric orbit, the positive and negative potentials emitted by the two particles perfectly cancel along the axis of rotation. This creates a line of zero net potential. This axis acts as a near-zero-potential corridor through which another Architrino could pass without being accelerated by the binary, provided its path is perfectly aligned with the axis.
 
 Validation note: Compare these claims against the standard numerical cross-checks (see 00.2.5 — Numerical Cross-Checks).
 
