--- a/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.2 - Walkthrough Step 2 — Units and Constants.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.2 - Walkthrough Step 2 — Units and Constants.md
@@ -38,7 +38,7 @@ Detailed explanation (dynamical geometry):
   - $\sigma_{q q'}=\mathrm{sign}(q\,q')$ selects attraction vs repulsion while keeping the acceleration strictly collinear with $\hat{\mathbf{r}}$. Like-on-like (σ=+1) points along +$\hat{\mathbf{r}}$ (repulsion); unlike (σ=-1) points along -$\hat{\mathbf{r}}$ (attraction).
 
 - Line of action ($r$, $\hat{\mathbf{r}}$):
-  - $r=\|\mathbf{s}_{o'}(t)-\mathbf{s}_o(t')\|$ is the separation between the receiver “now” and the source at its causal emission time. $\hat{\mathbf{r}}$ is the corresponding unit vector. All per-hit actions are purely radial along this line; no transverse/right-hand-rule terms appear.
+  - $r=\|\mathbf{s}_{o'}(t)-\mathbf{s}_o(t_0)\|$ is the separation between the receiver “now” and the source at its causal emission time. $\hat{\mathbf{r}}$ is the corresponding unit vector. All per-hit actions are purely radial along this line; no transverse/right-hand-rule terms appear.
 
 - Combined role in assembly scales:
   - The trio $(\kappa,\epsilon,\eta)$, together with the $1/r^2$ law and emitter-side velocity modulation, determines emergent scales such as the smallest sustainable orbit $d_0$ and fastest natural frequency $2\pi/t_0$. Intuitively, stronger coupling (larger $\kappa\epsilon^2$) and thinner shells (smaller $\eta$) favor tighter, faster structures until self-interaction and delay balance inward trends.
