--- a/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.9 - Walkthrough Step 9 — Informational ambiguity.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.9 - Walkthrough Step 9 — Informational ambiguity.md
@@ -4,7 +4,7 @@ Existing text excerpt:
 > ### **Informational Ambiguity at the Receiver**
 > From the perspective of the receiving Architrino, the information carried by an intersecting potential sphere is limited. The receiver only knows two things:
 > 1.  The net strength of the potential at the point of intersection.
-> 2.  The radial direction from which the potential arrived (i.e., the vector pointing back to the emission point).
+> 2.  The unoriented line of action through its current position (i.e., one of the two open rays on that line; orientation along the line is ambiguous).
 
 Detailed explanation (degeneracies and inference limits):
 
