--- a/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.9 - Walkthrough Step 9 — Informational ambiguity.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.9 - Walkthrough Step 9 — Informational ambiguity.md
@@ -15,6 +15,18 @@ Detailed explanation (degeneracies and inference limits):
   - Attraction from a positive charge on one side is indistinguishable, at an instant, from repulsion by a negative charge located at the diametrically opposite point along the same line.
 
 - Consequence for reconstruction:
-  - Instantaneous local data at the receiver are insufficient to invert for sources. Only over time—using path-history consistency (changing $\hat{\mathbf{r}}$, varying $r$, sequences of hits)—can partial reconstruction be attempted.
+  - Instantaneous local data at the receiver are insufficient to invert for sources; this remains true even for an absolute observer who knows the universal clock $t$ and the Euclidean rest frame. The absolute observer can eliminate coordinate uncertainty (perfect synchronization and alignment) but not the physical ambiguities below.
+  - Irreducible ambiguities at an instant:
+    - Sign/side ambiguity: attraction from a positive source on one side is indistinguishable from repulsion by a negative source on the diametrically opposite side along the same line.
+    - Distance–speed degeneracy: the per-hit magnitude scales like $f(|v_{\text{em}}|)/r^2$, so unknown emitter speed at emission is traded against distance $r$.
+    - Superposition along a line: multiple sources aligned on the same unoriented line of action can sum to the same net magnitude and direction at one instant.
+    - Self-hit confound: a self-interaction and an external source can yield identical instantaneous data if they lie on the same line with compensating magnitudes.
+  - What helps (over time or with more views):
+    - Track the time series of the line of action $\hat{\mathbf{r}}(t)$ and separation proxy $r(t)$ inferred from timing and geometry; curvature and rotation of $\hat{\mathbf{r}}$ constrain source trajectories.
+    - Correlate amplitude changes with plausible $f(|v|)$ models to separate distance vs speed effects statistically.
+    - Use multiple receivers (an array) to triangulate unoriented lines at the same $t$; intersecting rays narrow candidate locations (two-sided).
+    - Actively vary the receiver path to sample different directions and ranges, turning the inverse problem into a controlled experiment.
+    - Impose priors: charge inventories, speed bounds, and assembly templates reduce degeneracy space.
+  - Absolute-observer note: Access to absolute time and a common Euclidean frame enables global correlation of events across receivers, but unique inversion at an instant would require hidden information (the full emission ledger $\{(t_0,\mathbf{s}_j(t_0),q_j,\mathbf{v}_j(t_0))\}_j$). Practical reconstruction is therefore necessarily temporal, statistical, and multi-view.
 
 Plain language: A hit tells you how hard and from which direction you’re being pushed—but not who pushed you or how far away they are. Many different source stories can fit the same momentary shove.
