--- a/Geometrical Model of Nature/00 - Foundation Elements/00.0 - Absolute Time and Space/00.0.2 - Absolute Space.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.0 - Absolute Time and Space/00.0.2 - Absolute Space.md
@@ -14,6 +14,8 @@ The geometry is homogeneous and isotropic under $E(3)$: translations and rotatio
 
 Here’s how to define it formally:
 
+Note: We use $h_{ij}$ for the spatial metric throughout (see the Mathematical Style Guide).
+
 ---
 
 ### **1. Pure Math (metric space version)**
@@ -33,11 +35,11 @@ In plain language: this is ordinary three-dimensional Euclidean space with the f
 ### **2. Differential Geometry (Riemannian manifold version)**
 We define space as the Riemannian manifold:
 $$
-(\mathbb{R}^3, g)
+(\mathbb{R}^3, h)
 $$
 with the flat metric tensor:
 $$
-g = dx^2 + dy^2 + dz^2
+h = dx^2 + dy^2 + dz^2
 $$
 This metric has a positive-definite signature $(+, +, +)$. The Riemann curvature tensor vanishes identically (flat space). The Levi-Civita connection is torsion-free, and its geodesics are straight lines (constant-velocity solutions in Cartesian coordinates). Plain language: there is no bending of space—triangles have 180°, and straight lines stay straight unless a force is applied.
 
@@ -47,7 +49,7 @@ This metric has a positive-definite signature $(+, +, +)$. The Riemann curvature
 Coordinates: $x^i = (x, y, z)$, where the spatial index $i \in \{1,2,3\}$.
 Metric:
 $$
-g_{ij} = \delta_{ij} \quad (\text{the Kronecker delta})
+h_{ij} = \delta_{ij} \quad (\text{the Kronecker delta})
 $$
 The spatial line element is:
 $$
@@ -55,12 +57,12 @@ ds^2 = \delta_{ij} \, dx^i dx^j = dx^2 + dy^2 + dz^2
 $$
 
 Properties and implications:
-- Identity action: $\delta_{ij}$ acts as the identity; raising/lowering is trivial with $g^{ij}=\delta^{ij}$, so $v_i=\delta_{ij}v^j$ and $v^i=\delta^{ij}v_j$.
+- Identity action: $\delta_{ij}$ acts as the identity; raising/lowering is trivial with $h^{ij}=\delta^{ij}$, so $v_i=\delta_{ij}v^j$ and $v^i=\delta^{ij}v_j$.
 - Dot product and norm: $u\!\cdot\!v = g_{ij}u^i v^j$, $\|v\|^2 = g_{ij}v^i v^j$ (Euclidean).
 - Connection: In Cartesian coordinates, $\Gamma^{i}{}_{jk}=0$; covariant derivatives equal partials and geodesics are straight.
 - Curvature: $R^{i}{}_{jkl}=0$, $R_{ij}=0$, $R=0$ (flat).
-- Measure and operators: $\sqrt{\det g}\,d^3x = dx\,dy\,dz$; $\Delta = g^{ij}\partial_i\partial_j = \partial_x^2+\partial_y^2+\partial_z^2$.
-- Coordinates: In curvilinear frames (e.g., spherical), $g_{ij}$ takes the familiar flat-space form $\mathrm{diag}(1, r^2, r^2\sin^2\theta)$; $\delta_{ij}$ is specific to Cartesian frames.
+- Measure and operators: $\sqrt{\det h}\,d^3x = dx\,dy\,dz$; $\Delta = h^{ij}\partial_i\partial_j = \partial_x^2+\partial_y^2+\partial_z^2$.
+- Coordinates: In curvilinear frames (e.g., spherical), $h_{ij}$ takes the familiar flat-space form $\mathrm{diag}(1, r^2, r^2\sin^2\theta)$; $\delta_{ij}$ is specific to Cartesian frames.
 
 ---
 
