--- a/Geometrical Model of Nature/20 - Informational Layer/20.1 - Semantic Interfaces/20.1.1 - Schemas & Conventions/20.1.1.0 - Mathematical Style Guide.md
+++ b/Geometrical Model of Nature/20 - Informational Layer/20.1 - Semantic Interfaces/20.1.1 - Schemas & Conventions/20.1.1.0 - Mathematical Style Guide.md
@@ -40,6 +40,8 @@ Plain language: One global clock t and ordinary 3D space; we write vectors in bo
   h_{ij} = \delta_{ij}\quad\text{on each slice }\Sigma_t.
   $$
 
+  Notation: We use $h_{ij}$ exclusively for the spatial metric; do not use $g_{ij}$.
+
   Here $\delta_{ij}$ is the Kronecker delta (identity). It defines the Euclidean dot product and norm:
   $u\!\cdot\!v = h_{ij}u^i v^j$ and $\|v\|^2 = h_{ij}v^i v^j$. Raising/lowering is trivial with $h^{ij}=\delta^{ij}$.
   In Cartesian frames, $\Gamma^{i}{}_{jk}=0$, so covariant derivatives equal partial derivatives and geodesics are straight; curvature vanishes identically. In curvilinear coordinates (e.g., spherical), $h_{ij}$ takes the flat-space form $\mathrm{diag}(1, r^2, r^2\sin^2\theta)$, still representing the same flat geometry.
