--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.4 - Action.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.4 - Action.md
@@ -12,7 +12,7 @@ Geodesics and dynamics: The background is fixed (absolute time × Euclidean spac
 
 Symbols:
 -   $v=1$ (field speed by units), $\kappa>0$ (coupling), $\eta>0$ (shell thickness)
--   $f(\lvert v\rvert)$ (emitter-speed dimming factor; default $f(\lvert v\rvert)=1/(1+\lvert v\rvert)$).
+-   $f(\beta)$ (emitter-speed dimming factor; default $f(\beta)=1/(1+\beta)$ with $\beta=\|\mathbf{v}\|/v$, and $\beta=\|\mathbf{v}\|$ in $v=1$ units).
 -   $\epsilon>0$ (unit charge magnitude); Electrino $q=-\epsilon$, Positrino $q=+\epsilon$
 -   $\sigma_{q q'}=\mathrm{sign}(q\,q')\in\{+1,-1\}$
 -   $r=\|\mathbf{s}_{o'}(t)-\mathbf{s}_o(t_0)\|$, $\;\hat{\mathbf{r}}=(\mathbf{s}_{o'}(t)-\mathbf{s}_o(t_0))/r$
@@ -79,7 +79,7 @@ Radial motion and the $1/r^2$ factor (local trend):
 
 Path-history delay shifts both the causal root $t_0$ and $\hat{\mathbf{r}}$ over finite intervals, so these are local statements.
 
-Modeling note: We modulate only the emission amplitude by the source speed via $f(\lvert \mathbf{v}_o(t_0)\rvert)$ (default $f(\lvert v\rvert)=1/(1+\lvert v\rvert)$; see 00.2.1.11). The receiver’s velocity does not further modulate the force magnitude; it influences the instantaneous power through $\mathbf{a}\cdot\mathbf{v} = |\mathbf{a}|\,v_r$ and the subsequent evolution of $r$.
+Modeling note: We modulate only the emission amplitude by the source speed via $f(\lvert \mathbf{v}_o(t_0)\rvert)$ (default $f(\beta)=1/(1+\beta)$ with $\beta=\|\mathbf{v}\|$ since $v=1$; see 00.2.1.11). The receiver’s velocity does not further modulate the force magnitude; it influences the instantaneous power through $\mathbf{a}\cdot\mathbf{v} = |\mathbf{a}|\,v_r$ and the subsequent evolution of $r$.
 
 Plain language: split your velocity into along-the-line and sideways. A hit only changes the along-the-line piece right now; sideways motion continues. If you’re moving inward, the next pushes tend to be stronger (1/r²); outward, weaker.
 
@@ -117,8 +117,8 @@ opposite point on the same line.
 
 Rest-frame recast (useful inference device): Any single hit can be equivalently described with a stationary emitter (|v|=0) placed somewhere along the same unoriented line of action, with the emitter’s actual speed at emission absorbed into an effective amplitude q_eff and an adjusted emission time. This transformation preserves the receiver’s information content (magnitude and line only) and does not resolve the sign/side ambiguity; it merely trades unknown speed and distance for an equivalent static surrogate on one of the two open rays.
 
-Level-set relation (speed–distance tradeoff): For a fixed observed per-hit magnitude, the canonical law implies $a \propto f(|v_{\text{em}}|)/r^2$, hence $r \propto \sqrt{\,f(|v_{\text{em}}|)\,}$. For a fixed observed magnitude A, the physically consistent $(r,|v_{\text{em}}|)$
-   pairs satisfy $r \propto \sqrt{f(|v_{\text{em}}|)}$, so faster emitters would have been closer along one of the two open rays. With the default $f(|v|)=1/(1+|v|)$ this reduces to $r \propto 1/\sqrt{1+|v_{\text{em}}|}$. A stationary surrogate can either keep $r$ and absorb speed into $q_{\mathrm{eff}}$, or
-   keep $q$ fixed and move to $r_{\mathrm{virtual}} = r/\sqrt{\,f(|v_{\text{em}}|)\,}$.
+Level-set relation (speed–distance tradeoff): For a fixed observed per-hit magnitude, the canonical law implies $a \propto f(\beta_{\text{em}})/r^2$, hence $r \propto \sqrt{\,f(\beta_{\text{em}})\,}$ with $\beta_{\text{em}}=\|\mathbf{v}_{\text{em}}\|/v$ (in $v=1$ units, $\beta_{\text{em}}=\|\mathbf{v}_{\text{em}}\|$). For a fixed observed magnitude A, the physically consistent $(r,\beta_{\text{em}})$
+   pairs satisfy $r \propto \sqrt{f(\beta_{\text{em}})}$, so faster emitters would have been closer along one of the two open rays. With the default $f(\beta)=1/(1+\beta)$ this reduces to $r \propto 1/\sqrt{\,1+\beta_{\text{em}}\,}$. A stationary surrogate can either keep $r$ and absorb speed into $q_{\mathrm{eff}}$, or
+   keep $q$ fixed and move to $r_{\mathrm{virtual}} = r/\sqrt{\,f(\beta_{\text{em}})\,}$.
 
 This ambiguity is compounded by superposition. The net potential at any instant is the sum of all intersecting spheres. A measured potential along a single radial could be the result of a complex confluence of fields from many different emitters located along that line of action, arriving from both directions.
