--- a/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.11 - Walkthrough Step 11 — Emitter-speed modulation and calibration.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.11 - Walkthrough Step 11 — Emitter-speed modulation and calibration.md
@@ -13,15 +13,15 @@ Purpose: Collect and formalize the rationale, options, and calibration strategy 
   $$
   with the default
   $$
-  f(|v|)=\frac{1}{1+|v|}.
+  f(\beta)=\frac{1}{1+\beta},\quad \beta=\frac{\|\mathbf{v}\|}{v}\ \ (\text{so in }v=1\text{ units, }\beta=\|\mathbf{v}\|).
   $$
 - Why this f was chosen:
   - Normalization: f(0)=1 (undimmed at rest).
   - Positivity and boundedness: 0 < f ≤ 1 for all |v|.
   - Monotone decreasing with |v| (faster emitters dim more).
-  - Smooth and algebraically simple; linear small-β behavior f=1−|v|+O(v²).
+  - Smooth and algebraically simple; linear small-β behavior $f=1-\beta+O(\beta^2)$.
   - Scale-free in v=1 units; no extra parameters needed.
-  - Benign at the |v|=1 self-interaction threshold: f(1)=1/2.
+  - Benign at the $\beta=1$ self-interaction threshold: $f(1)=1/2$.
 
 Plain language: We dim each wavefront by a speed-dependent factor that is 1 at rest and smoothly decreases with speed; the simplest such choice is 1/(1+|v|).
 
@@ -29,7 +29,7 @@ Plain language: We dim each wavefront by a speed-dependent factor that is 1 at r
 
 2) Quick calculation at field speed
 
-- At |v_em|=1 (with v=1 units):
+- At $\beta_{\text{em}}=1$ (i.e., $|v_{\text{em}}|=v$; with $v=1$, $|v_{\text{em}}|=1$):
   $$
   f(1)=\frac{1}{1+1}=\frac{1}{2},\qquad
   |\mathbf{a}|=\frac{\kappa\,|q_j q_{o′}|}{2\,r^2}.
@@ -48,15 +48,15 @@ Plain language: At field speed, each hit is exactly half as strong as at rest, a
 
 For a fixed observed per-hit magnitude A at the receiver, the canonical form reads
 $$
-A \propto \frac{f(|v_{\text{em}}|)}{r^2}.
+A \propto \frac{f(\beta_{\text{em}})}{r^2},\qquad \beta_{\text{em}}=\frac{\|\mathbf{v}_{\text{em}}\|}{v}.
 $$
 Therefore the distance–speed pairs that are consistent with the same A satisfy
 $$
-r \;\propto\; \sqrt{\,f(|v_{\text{em}}|)\,}.
+r \;\propto\; \sqrt{\,f(\beta_{\text{em}})\,}.
 $$
 - Default f gives
   $$
-  r \propto \frac{1}{\sqrt{1+|v_{\text{em}}|}},
+  r \propto \frac{1}{\sqrt{\,1+\beta_{\text{em}}\,}},
   $$
   which matches the relation used in Action.md.
 - Interpretation on the unoriented line of action: faster candidate emitters must lie closer on one of the two open rays to yield the same A.
@@ -69,38 +69,38 @@ Plain language: Keeping the push size the same, faster emitters must be closer; 
 
 Constraints to keep the model well-posed and numerically stable:
 - C1 Normalization at rest: f(0)=1.
-- C2 Positivity and boundedness: 0 < f(|v|) ≤ 1 for all |v|.
-- C3 Monotone decreasing in |v|.
+- C2 Positivity and boundedness: $0 < f(\beta) \le 1$ for all $\beta$.
+- C3 Monotone decreasing in $\beta$.
 - C4 Smoothness (≥ C¹) to mesh with η-regularization.
 - C5 High-speed decay: f(|v|)→0 as |v|→∞.
 - C6 Dimensionless in v=1 units (or written with an explicit speed scale).
 
 Viable alternative families (examples):
-- Rational: f(|v|)=1/(1+α|v|^n) with α>0, n≥1.
-  - n=1 recovers the default (α=1); α tunes the slope at |v|=0.
+- Rational: $f(\beta)=1/(1+\alpha\,\beta^n)$ with $\alpha>0$, $n\ge 1$.
+  - $n=1$ recovers the default ($\alpha=1$); $\alpha$ tunes the slope at $\beta=0$.
   - n=2 yields even-in-velocity damping; small-β starts at O(β²).
-- Root-Lorentz-like: f(|v|)=1/√(1+α v²) (gentler mid-speed damping).
-- Exponential: f(|v|)=exp(−α|v|) or exp(−(v/v_0)²) (strong tails).
+- Root-Lorentz-like: $f(\beta)=1/\sqrt{\,1+\alpha\,\beta^2\,}$ (gentler mid-speed damping).
+- Exponential: $f(\beta)=\exp(-\alpha\,\beta)$ or $\exp\!\big(-( \beta/\beta_0)^2\big)$ (strong tails).
 Each option preserves the radial-only, delayed structure; only weights change.
 
 ---
 
 5) How to calibrate f (principled criteria)
 
-Choose a parametric family f(|v|;θ) and determine θ by one or more of:
+Choose a parametric family $f(\beta;\theta)$ and determine $\theta$ by one or more of:
 - Binaries (scale selection): enforce existence and reasonableness of the smallest stable orbit (d₀) and fastest natural frequency (2π/t₀) in the symmetric binary (10.0.1).
 - Energy consistency: with mollified shells Φ_η, minimize secular work–energy drift across representative motions (e.g., near the |v|=1 switch).
 - Phenomenology targets: fit corridor strengths (photon-like trains), precession rates in near-Kepler orbits (00.2.3.3), and shielding levels in cores.
 - Regularity margins: prefer θ that maximizes numerical stability (bounded Lipschitz constants for forces) under both event-aware and mollified integration.
 
-Implementation note: The canonical law is written with f in the numerator; setting f(|v|)=1/(1+|v|) reproduces the current equations. Other choices simply substitute a different f.
+Implementation note: The canonical law is written with $f$ in the numerator; setting $f(\beta)=1/(1+\beta)$ reproduces the current equations. Other choices simply substitute a different $f$.
 
 ---
 
 6) Summary
 
-- Default: f(|v|)=1/(1+|v|) is a minimal, stable dimmer with clear small-β behavior and f(1)=1/2.
-- General inference: for fixed observed magnitude, r ∝ √f(|v_em|), so faster emitters are closer on the same two open rays.
-- Next steps: treat f as configurable f(|v|;θ), document θ, and calibrate via binary scales, energy consistency, and phenomenology.
+- Default: $f(\beta)=1/(1+\beta)$ is a minimal, stable dimmer with clear small-β behavior and $f(1)=1/2$.
+- General inference: for fixed observed magnitude, $r \propto \sqrt{f(\beta_{\text{em}})}$, so faster emitters are closer on the same two open rays.
+- Next steps: treat $f$ as configurable $f(\beta;\theta)$, document $\theta$, and calibrate via binary scales, energy consistency, and phenomenology.
 
 Plain language: The exact shape of the dimming curve isn’t ordained; we picked the simplest one that behaves well. If evidence suggests a different shape, we can swap it in and tune it without changing the rest of the framework.
