--- a/Geometrical Model of Nature/20 - Informational Layer/20.1 - Semantic Interfaces/20.1.1 - Schemas & Conventions/20.1.1.0 - Mathematical Style Guide.md
+++ b/Geometrical Model of Nature/20 - Informational Layer/20.1 - Semantic Interfaces/20.1.1 - Schemas & Conventions/20.1.1.0 - Mathematical Style Guide.md
@@ -164,7 +164,7 @@ Plain language: With slightly thick shells, the usual “force is minus gradient
 - $\epsilon = |e|/6$ is the unit charge magnitude; Electrino $q=-\epsilon$, Positrino $q=+\epsilon$.
 - $\kappa>0$ universal coupling.
 - $\eta>0$ mollifier width (regularization parameter).
-- $q_{\mathrm{eff}}(t_0) = q\,f\!\big(\lvert v_{\text{source}}(t_0)\rvert\big)$ (per-wavefront amplitude; emission cadence is constant; default $f(|v|)=1/(1+|v|)$). Receiver velocity affects only instantaneous power $\,\mathbf{F}\cdot\mathbf{v} = |\mathbf{F}|\,v_r$.
+- $q_{\mathrm{eff}}(t_0) = q\,f\!\big(\beta_{\text{source}}(t_0)\big)$ where $\beta_{\text{source}}(t_0)=\|\mathbf{v}_{\text{source}}(t_0)\|/v$ (in $v=1$ units, $\beta=\|\mathbf{v}\|$). Default $f(\beta)=1/(1+\beta)$. Receiver velocity affects only instantaneous power $\,\mathbf{F}\cdot\mathbf{v} = |\mathbf{F}|\,v_r$.
 - $r$, $\hat{\mathbf{r}}$ as above; $H$ is the Heaviside step function with $H(0)=0$.
 
 Plain language: Fix units so the field speed is one; use ε as the basic charge; faster motion dims only the emitter’s per-wavefront amplitude and response, not cadence.
@@ -188,3 +188,9 @@ Plain language: Fix units so the field speed is one; use ε as the basic charge;
 - Notation for “now”: use $t_{\text{now}}$ for a fixed current evaluation time; use $t_{\text{obs}}$ for observation time. Avoid Tnow/`T_now`; keep $t$ as the running variable elsewhere.
 - Emitters/receivers are individual Architrinos; composite assemblies never emit or receive as wholes; their behavior emerges from constituent Architrinos.
 - On first occurrence in a doc: “We work in units with field speed v=1 unless stated otherwise.”
+
+- Notation lint (common mistakes):
+  - Use bold for vectors: $\mathbf{v}$, not plain v.
+  - Reserve $v$ for the field speed (scalar). Use $\|\mathbf{v}\|$ for speed magnitude, or $\beta=\|\mathbf{v}\|/v$; with $v=1$, $\beta=\|\mathbf{v}\|$.
+  - When giving the default dimming, write $f(\beta)=1/(1+\beta)$, not $f(|v|)$.
+  - Do not write mixed forms like $|v|$ to mean speed; bold the vector and take its norm.
