--- a/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.4 - Walkthrough Step 4 — Master equation of motion.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.4 - Walkthrough Step 4 — Master equation of motion.md
@@ -13,7 +13,7 @@ Detailed explanation (terms and conventions):
   - The per-hit magnitude falls as $1/r^2$ (surface density on spheres). All geometric constants (e.g., $1/(4\pi)$ and any Jacobians like $1/v$) are absorbed into $\kappa$ by convention.
 
 - Velocity modulation (emitter-only):
-  - Only the emitter’s speed at emission, $\|\mathbf{v}_o(t_0)\|$, dims the per-wavefront amplitude via $f(\|\mathbf{v}_o(t_0)\|)$ (default $f(|v|)=1/(1+|v|)$).
+  - Only the emitter’s speed at emission, $\|\mathbf{v}_o(t_0)\|$, dims the per-wavefront amplitude via $f(\|\mathbf{v}_o(t_0)\|)$ (default $f(\beta)=1/(1+\beta)$ with $\beta=\|\mathbf{v}\|/v$; in $v=1$ units, $\beta=\|\mathbf{v}\|$).
   - The receiver’s velocity does not change the instantaneous force magnitude; it only affects power through $\mathbf{a}\cdot\mathbf{v}$ (see Step 5).
 
 - Superposition:
