--- a/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.9 - Perspective.md
+++ b/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.9 - Perspective.md
@@ -24,10 +24,10 @@ We work throughout in units with field speed $v=1$; per-hit accelerations are pu
 ## 2) Velocity-modulated emission: a built-in energy regulator
 
 - What we assume:
-  - Emission cadence is constant; the effective per-wavefront amplitude is $q_{\mathrm{eff}}(t_0)=q\,f\!\big(|v_{\text{source}}(t_0)|\big)$ (default $f(|v|)=1/(1+|v|)$).
+  - Emission cadence is constant; the effective per-wavefront amplitude is $q_{\mathrm{eff}}(t_0)=q\,f\!\big(\beta_{\text{source}}(t_0)\big)$ with $\beta_{\text{source}}=\|\mathbf{v}_{\text{source}}(t_0)\|/v$ (default $f(\beta)=1/(1+\beta)$).
   - Canonical per-hit law:
     $$
-    a_{o′\leftarrow o} \propto \sigma_{q_o q_{o′}}\,\frac{|q_o q_{o′}|}{r^2}\,f\!\big(|v_o|\big)\,\hat{\mathbf{r}}.
+    a_{o′\leftarrow o} \propto \sigma_{q_o q_{o′}}\,\frac{|q_o q_{o′}|}{r^2}\,f\!\big(\|\mathbf{v}_o\|\big)\,\hat{\mathbf{r}}.
     $$
 
 - Why it matters:
